<resources>
    <string name="app_name">Recovery-AI</string>
    <string name="skip">Skip</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in_facebook">Log in</string>
    <string name="sign_in_google">Sign in</string>
    <string name="profile_image">profile image</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="send_code">send code</string>

    <!-- Strength Exercise options -->
    <string-array name="exercise_options">
        <item>Select Exercise</item>
        <item>Bench Press</item>
        <item>Squat</item>
        <item>Deadlift</item>
        <item>Pull Ups</item>
        <item>Other</item>
    </string-array>

    <!-- Cardio Activity option -->
    <string-array name="activity_options">
        <item>Select</item>
        <item>Running</item>
        <item>Walking</item>
        <item>Cycling</item>
        <item>Stairmaster</item>
        <item>Rowing</item>
        <item>Other</item>
    </string-array>

    <!-- Sleep hours options -->
    <string-array name="sleep_hours_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="goal_options">
        <item>Get Fit</item>
        <item>Lose Weight</item>
        <item>Build Muscle</item>
        <item>Injury Prevention</item>
    </string-array>

    <string-array name="injury_focus_options">
        <item>Shoulder</item>
        <item>Knee</item>
        <item>Back</item>
        <item>Hip</item>
        <item>Ankle</item>
    </string-array>

    <string-array name="am_pm_options">
        <item>AM</item>
        <item>PM</item>
    </string-array>

</resources>