<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_2b_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!-- Skip text (top right) -->
    <Button
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@drawable/skip_pill"
        app:backgroundTint="@null"
        android:textSize="20sp"
        android:paddingHorizontal="18dp"
        android:paddingVertical="8dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:elevation="6dp"
        android:fontFamily="@font/inter_extrabold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"/>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <!-- Bottom actions -->
    <LinearLayout
        android:id="@+id/bottomActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-30dp"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnCreateAccount"
            android:background="@drawable/btn_create_account"
            app:backgroundTint="@null"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:text="@string/create_account"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter_extrabold"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/btnSignIn"
            android:background="@drawable/btn_sign_in"
            app:backgroundTint="@null"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in"
            android:paddingTop="0dp"
            android:fontFamily="@font/inter_extrabold"
            android:textSize="28sp"
            android:textColor="#000000"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>